<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D6EDFB"
    android:layoutDirection="ltr"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/verification_toolbar"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="#FFC444"
        android:visibility="visible" />

    <TextView
        android:id="@+id/verify_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/verify_email_btn"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="40dp"
        android:text="@string/after_verify"
        android:textAlignment="center"
        android:textSize="25sp" />

    <Button
        android:id="@+id/verify_email_btn"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerInParent="true"
        android:background="@drawable/buttonshape_3"
        android:text="@string/confirm_verify"
        android:textColor="@color/colorWhit"
        android:textSize="20sp"
        android:clickable="false" />

    <TextView
        android:id="@+id/text_not"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/verify_email_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/not_received"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/send_again"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_not"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:text="@string/send_agin"
        android:textSize="15sp" />


</RelativeLayout>