<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/queue_cell"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="5dp"
    app:cardElevation="5dp"
    app:cardUseCompatPadding="true"
    app:contentPadding="50dp">

    <TextView
        android:id="@+id/no_queue_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/note"
        android:textAlignment="center"
        android:textColor="#888"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textDirection="rtl"
        android:visibility="visible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/date_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/date"
            android:textSize="20sp"
            android:visibility="gone" />

        <Space
            android:layout_width="1dp"
            android:layout_height="5dp" />

        <TextView
            android:id="@+id/time_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/time"
            android:textSize="20sp"
            android:visibility="gone" />

    </LinearLayout>
</android.support.v7.widget.CardView>

